<resources>
    <string name="app_name">Daftar</string>
    <string name="welcome_to_kobeta">Welcome to Kobeta!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lessons_list">Lessons List</string>
    <string name="label_singular">Singular</string>
    <string name="label_plural">Plural</string>
    <string name="noun_singular">Noun singular</string>
    <string name="noun_plural">Noun plural</string>
    <string name="past_form">Past form</string>
    <string name="nonpast_form">Non-past form</string>
    <string name="label_past">Past</string>
    <string name="label_nonpast">Non-past</string>
    <string name="verbal_nout">Verbal Noun</string>
    <string name="label_verbnoun">Verbal Noun</string>
    <string name="save">Save</string>
    <string name="label_translation">Translation</string>
    <string name="translation">Translation</string>
    <string name="label_particle">Particle</string>
    <string name="particle">Particle</string>
    <string name="verb">Verb</string>
    <string name="noun">Noun</string>
    <string name="new_word">New</string>
    <string name="saved_exclamation">Saved!</string>
    <string name="label_lesson_name">Lesson name</string>
    <string name="label_lesson_description">Description</string>
    <string name="lesson_name">Lesson name</string>
    <string name="lesson_description">Description</string>
    <string name="edit_lesson_description">Edit</string>
    <string name="new_lesson">New Lesson</string>
    <string name="delete_lesson">Delete</string>
    <string name="message_lesson_deleted">Lesson deleted</string>
    <string name="do_you_want_to_delete_this_lesson">Do you want to delete this lesson?</string>
    <string name="choice_yes">Yes</string>
    <string name="choice_no">No</string>
    <string name="delete_word">Delete Word</string>
    <string name="message_word_deleted">Word deleted</string>
    <string name="do_you_want_to_delete_this_word">Do you want to delete this word?</string>
    <string name="tip_apply_changes">Apply changes</string>
    <string name="tip_add_new_word">Add new word</string>
    <string name="tip_add_new_lesson">Add new lesson</string>
    <string name="tip_save_word">Save word</string>
    <string name="menu_go_to_lessons_list">Go to lessons list</string>
    <string name="menu_export_training">Export training</string>
    <string name="error_lesson_name_is_necessary">Lesson name is necessary</string>
    <string name="error_you_have_to_select_pos">You have to select the part of speech</string>
    <string name="error_translation_is_mandatory">Translation is needed</string>
    <string name="error_past_form_is_mandatory">A verb must have at least a Past form</string>
    <string name="error_singular_form_is_mandatory">At least the Singular form must be specified</string>
    <string name="error_particle_is_necessary">A particle cannot be empty</string>
    <string name="no_words_in_lesson_yet">No words in this lesson yet</string>
    <string name="train">Train</string>
    <string name="no_answer">no answer</string>
    <string name="training_finished_exclamation">Training finished!</string>
    <string name="export_training">Export Training</string>
    <string name="error_saving_scores">Error saving scores</string>
    <string name="title_lesson_contents">Lesson Contents</string>
    <string name="title_lesson_description">Lesson Description</string>
    <string name="title_verb_forms">Verb Forms</string>
    <string name="title_noun_forms">Noun Forms</string>
    <string name="title_particle_forms">Particle forms</string>
    <string name="title_adding_word">Adding Word</string>
    <string name="description">Description</string>
    <string name="title_evaluation">Check</string>
</resources>
