<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
                name="viewModel"
                type="bilbao.ivanlis.kobeta.NounFragmentViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                       android:layout_height="match_parent"
                                                       tools:context="NounFragment">


        <Button
                android:text="@string/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/save_button" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:onClick="@{() -> viewModel.onSaveClicked()}"
        />
        <TextView
                android:text="@string/label_singular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_singular" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="@+id/singular_edit"
                app:layout_constraintBottom_toBottomOf="@+id/singular_edit"/>
        <TextView
                android:text="@string/label_plural"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_plural" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="@+id/plural_edit"
                app:layout_constraintBottom_toBottomOf="@+id/plural_edit"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="@{viewModel.nounForms.singularForm}"
                android:ems="10"
                android:id="@+id/singular_edit" android:hint="@string/noun_singular"
                app:layout_constraintStart_toEndOf="@+id/text_singular" android:layout_marginStart="8dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/save_button"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="@{viewModel.nounForms.pluralForm}"
                android:ems="10"
                android:id="@+id/plural_edit"
                android:hint="@string/noun_plural" app:layout_constraintStart_toEndOf="@+id/text_plural"
                android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/singular_edit"/>
        <TextView
                android:text="@string/label_translation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_translation" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="@+id/translation_edit"
                app:layout_constraintBottom_toBottomOf="@+id/translation_edit"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@{viewModel.nounForms.translation}"
                android:ems="10"
                android:id="@+id/translation_edit"
                android:hint="@string/translation" app:layout_constraintStart_toEndOf="@+id/text_translation"
                android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/plural_edit"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>