<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                       android:layout_height="match_parent"
                                                       tools:context="VerbFragment">


        <Button
                android:text="Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/save_button" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/past_edit" android:layout_marginTop="4dp"
                android:hint="@string/past_form"
                app:layout_constraintTop_toBottomOf="@+id/save_button"
                app:layout_constraintStart_toEndOf="@+id/text_past" android:layout_marginStart="8dp"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/nonpast_edit"
                app:layout_constraintTop_toBottomOf="@+id/past_edit" android:layout_marginTop="16dp"
                app:layout_constraintStart_toEndOf="@+id/text_nonpast" android:layout_marginStart="8dp"
                android:hint="@string/nonpast_form"/>
        <TextView
                android:text="@string/label_past"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_past"
                app:layout_constraintTop_toTopOf="@+id/past_edit"
                app:layout_constraintBottom_toBottomOf="@+id/past_edit"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"/>
        <TextView
                android:text="@string/label_nonpast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_nonpast"
                app:layout_constraintBottom_toBottomOf="@+id/nonpast_edit"
                app:layout_constraintTop_toTopOf="@+id/nonpast_edit" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                tools:layout_editor_absoluteY="181dp"
                android:id="@+id/verbnoun_edit" android:hint="@string/verbal_nout"
                app:layout_constraintStart_toEndOf="@+id/textView4" android:layout_marginStart="8dp"/>
        <TextView
                android:text="@string/label_verbnoun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView4" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="@+id/verbnoun_edit"
                app:layout_constraintBottom_toBottomOf="@+id/verbnoun_edit"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>