<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
                name="viewModel"
                type="bilbao.ivanlis.kobeta.LessonDescriptionViewModel"
        />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                       android:layout_height="match_parent"
                                                       tools:context="LessonDescriptionFragment">
        <TextView
                android:text="@string/label_lesson_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_lesson_name"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/save_button"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_lesson_description"
                android:text="@string/label_lesson_description"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/lesson_name_edit"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/lesson_name_edit" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@+id/text_lesson_name"
                app:layout_constraintHorizontal_bias="0.0"
                android:hint="@string/lesson_name"
                android:text="@{viewModel.lesson.name}"
        />
        <Button
                android:text="@string/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/save_button" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="220dp"
                android:inputType="textMultiLine"
                android:gravity="start|top"
                android:ems="10"
                android:id="@+id/description_edit" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/text_lesson_description"
                android:hint="@string/lesson_description"
                android:text="@{viewModel.lesson.description}"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>